@@ -12,6 +12,7 @@ JEDIT 4.0 VERSION HISTORY
 - Documentation updates
 - 'Quick HyperSearch' with a selection, and 'Quick HyperSearch for Word'
   commands will now work even if the search bar is disabled
+- BeanShell 1.2b5 included
 
 + Bug Fixes
 
@@ -56,6 +57,7 @@ JEDIT 4.0 VERSION HISTORY
   user name was non-null, but the password was empty
 - When doing a BeanShell replace, the last subexpression would not be
   stored in a variable
+- 'Write HyperSearch Results' macro did not work
 
 + API Additions
 
